--- a/views/update.jade
+++ b/views/update.jade
@@ -25,7 +25,7 @@ block content
         .columns.is-vcentered
           .column.is-4.is-offset-4
             h1.title
-              | Edit Student
+              | Edit Data
             .box
               form(method="POST", action="/departmentdata/#{update._id}/update")
                 label.label Department Name
