--- a/views/addnew.jade
+++ b/views/addnew.jade
@@ -51,4 +51,4 @@ block content
                   input.input(type="text", placeholder="Twitter", name="tw" )
                 p.control
                   button.is-dark(type="submit") Submit
-  script(async='', type='text/javascript', src='/javascripts/bulma.js')
+  include footer
