--- a/views/departments.jade
+++ b/views/departments.jade
@@ -33,4 +33,5 @@ block content
                     span.panel-icon
                       i.fa.fa-book
         
-  script(async='', type='text/javascript', src='/javascripts/bulma.js')
+  include footer
+
