--- a/views/update.jade
+++ b/views/update.jade
@@ -54,4 +54,4 @@ block content
               p.has-text-centered
                 a(href='/departments') Department List
   
-  script(async='', type='text/javascript', src='/javascripts/bulma.js')
+  include footer
