--- a/views/departmentdata.jade
+++ b/views/departmentdata.jade
@@ -64,6 +64,7 @@ block content
             li
               a(href='/departmentdata/'+departmentdata._id+'/delete') Delete
           
-    
-  script(async='', type='text/javascript', src='/javascripts/bulma.js')
+  
+  include footer
+
               
