--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,7 @@
 extends landing
 
 block content
-  section.hero.is-fullheight.is-dark
+  section.hero.is-fullheight.is-dark.backgroundcus
     .hero-body
       .container.has-text-centered
         .columns.is-vcentered
@@ -17,4 +17,4 @@ block content
                 | Departments
               a.button.is-large.is-white.is-outlined(href='/departments/addnew')
                 | Add New
-
+    include footer
