--- a/views/departmentdata.jade
+++ b/views/departmentdata.jade
@@ -7,7 +7,7 @@ block content
           nav.nav
             .container
               .nav-left
-                a.nav-item(href='../index.html')
+                a.nav-item(href='/')
                   img(src='../images/bulma-white.png', alt='Description')
               span.nav-toggle
                 span
