--- a/views/departmentdata.jade
+++ b/views/departmentdata.jade
@@ -25,7 +25,7 @@ block content
         .columns.is-vcentered
           .column.is-5
             figure.image.is-4by3
-              img(src='http://placehold.it/800x600', alt='Description')
+              //img(src='http://placehold.it/800x600', alt='Description')
           .column.is-6.is-offset-1
             h1.title
               | Student Page
