--- a/views/departmentdata.jade
+++ b/views/departmentdata.jade
@@ -28,7 +28,7 @@ block content
               img(src='http://placehold.it/800x600', alt='Temporary')
           .column.is-6.is-offset-1
             h1.title
-              | Student Page
+              | Department Page
             br
             h2.subtitle
               | Department Name: #{departmentdata.dep_name}
