--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,9 +6,9 @@ html
     meta(name='viewport', content='width=device-width, initial-scale=1')
     title Government Departments
     link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css')
-    link(rel='stylesheet', type='text/css', href='../stylesheets/bulma.css')
-    link(rel='stylesheet', type='text/css', href='../stylesheets/base.css')
-    link(rel='stylesheet', type='text/css', href='../stylesheets/style.css')
+    link(rel='stylesheet', type='text/css', href='/stylesheets/bulma.css')
+    link(rel='stylesheet', type='text/css', href='/stylesheets/base.css')
+    link(rel='stylesheet', type='text/css', href='/stylesheets/style.css')
 
   body
     block content
