--- a/views/update.jade
+++ b/views/update.jade
@@ -49,6 +49,9 @@ block content
                 label.label Twitter
                 p.control
                   input.input(type="text", placeholder="Twitter", name="tw", value="#{update.tw}")
+                label.label Image URL
+                p.control
+                  input.input(type="text", placeholder="Image (URL)", name="picture", value="#{update.picture}")
                 p.control
                   button.is-dark(type="submit") Submit
               
