--- a/views/departments.jade
+++ b/views/departments.jade
@@ -8,7 +8,7 @@ block content
             .container
               .nav-left
                 a.nav-item(href='/')
-                  img(src='../images/bulma-white.png', alt='Description')
+                  img(src='/images/bulma-white.png', alt='Description')
               span.nav-toggle
                 span
                 span
