--- a/views/addnew.jade
+++ b/views/addnew.jade
@@ -49,7 +49,7 @@ block content
                 label.label Twitter
                 p.control
                   input.input(type="text", placeholder="Twitter", name="tw" )
-                label.label Image URL
+                label.label Image
                 p.control
                   input.input(type="text", placeholder="Image (URL)", name="picture")
                 p.control
