--- a/views/addnew.jade
+++ b/views/addnew.jade
@@ -20,6 +20,8 @@ block content
                 | Departments
               a.nav-item.is-active(href='/departments/addnew')
                 | Add Data
+              a.nav-item(href='/auth/logout')
+                | Log Out
     .hero-body
       .container
         .columns.is-vcentered
@@ -27,31 +29,52 @@ block content
             h1.title
               | Add Data
             .box
-              form(method="POST", action="/departments/addnew")
-                label.label Department Name
-                p.control
-                  input.input(type="text", placeholder="Department Name", name="dep_name" )
-                label.label Abbreviation
-                p.control
-                  input.input(type="text", placeholder="Abbreviation", name="abbrv" )
-                label.label Secretary/Head
-                p.control
-                  input.input(type="text", placeholder="Secretary/Head", name="head" )
+              if (error)
+                //--var eArr = []
+                //--var e
+                //--var a
+                //-for e in Object.keys(error.errors)
+                //-  eArr.push(e)
+                //-for a in eArr
+                .notification.is-danger
+                  //- | #{error.errors.head}
+                  //- | #{error.errors.abbrv}
+                  //- | #{error.errors.dep_name}
+                  | #{error}
+                  //--var er = "#{error}"
+                  //--var a = er.slice(1)
+                  //-h1= a
+              form(method="POST", action="/departments/")
+                label.label 
+                  | Department Name
+                  strong.iscolor *
+                  input.input(type="text", placeholder="", name="dep_name" )
+                label.label 
+                  | Abbreviation 
+                  strong.iscolor *
+                  input.input(type="text", placeholder="", name="abbrv" )
+                label.label 
+                  | Secretary/Head
+                  strong.iscolor *
+                  input.input(type="text", placeholder="", name="head" )
                 label.label Official Website
                 p.control
-                  input.input(type="url", placeholder="Official Website", name="website" )
+                  input.input(type="url", placeholder="http://www.example.com", name="website" )
                 label.label Contact Number
                 p.control
                   input.input(type="value", placeholder="Contact Number", name="contact" )
                 label.label Facebook
                 p.control
-                  input.input(type="text", placeholder="Facebook", name="fb" )
+                  input.input(type="text", placeholder="http://www.facebook.com/example", name="fb" )
                 label.label Twitter
                 p.control
-                  input.input(type="text", placeholder="Twitter", name="tw" )
+                  input.input(type="text", placeholder="http://www.twitter.com/example", name="tw" )
                 label.label Image
                 p.control
                   input.input(type="text", placeholder="Image (URL)", name="picture")
                 p.control
-                  button.is-dark(type="submit") Submit
+                  button.button.is-dark(type="submit") Submit
+                  span  
+                  a.btn.btn-link(href="/departments")
+                        button.button.is-dark(type="button") Cancel
   include footer
