--- a/views/departments.jade
+++ b/views/departments.jade
@@ -20,6 +20,8 @@ block content
                   | Departments
                 a.nav-item(href='/departments/addnew')
                   | Add Data
+                a.nav-item.is-active(href='/auth/logout')
+                  | Log Out
     .hero-body
       .container 
         nav.panel
@@ -29,7 +31,7 @@ block content
             ul
               for data in departments
                 li
-                  a.panel-block.is-active(href='/departmentdata/' + data._id ) #{data.dep_name}
+                  a.panel-block.is-active(href='/departments/' + data._id ) #{data.dep_name}
                     span.panel-icon
                       i.fa.fa-book
         
