--- a/views/register.jade
+++ b/views/register.jade
@@ -79,13 +79,13 @@ block content
                 label.label Username (atleast 8 alpha characters only)
                   input.input(type="text", placeholder="", name="username")
                 label.label Password
-                  input.input(type="text", placeholder="", name="password")
+                  input.input(type="password", placeholder="", name="password")
                 label.label First Name
                   input.input(type="text", placeholder="", name="first_name")
                 label.label Last Name
                   input.input(type="text", placeholder="", name="last_name")
                 label.label Email
-                  input.input(type="text", placeholder="", name="Email")
+                  input.input(type="text", placeholder="", name="email")
                 p.control
                   .block
                       button.button.is-dark(type="submit" , value="Register") Register
