--- a/views/index.jade
+++ b/views/index.jade
@@ -21,7 +21,7 @@ block content
               br
               if (user)
                 p You are logged in as #{user.username}
-                a(href="/auth/logout") logout
+                a(href="/auth/logout") Logout
               else
                 a(href='/auth/login')
                   | Login
