--- a/views/register.jade
+++ b/views/register.jade
@@ -1,34 +1,3 @@
-//- extends layout
-
-//- block content
-//-     h1 Register
-    
-//-     form(role="form", action="/auth/register", method="post")
-//-         .form-group
-//-             label(for="username") Username
-//-             input#username.form-control(name="username", type="text")
-//-         .form-group
-//-             label(for="password") Password
-//-             input#password.form-control(name="password", type="password")
-//-         .form-group
-//-             label(for="first_name") First Name
-//-             input#password.form-control(name="first_name", type="text")
-//-         .form-group
-//-             label(for="last_name") Last Name
-//-             input#password.form-control(name="last_name", type="text")
-//-         .form-group
-//-             label(for="email") Email
-//-             input#password.form-control(name="email", type="text")
-//-         p
-//-             a.btn.btn-link(href="/") Cancel
-//-             button.btn.btn-default(type="submit", value="Register") Register
-//-             br
-//-             if (error)
-//-                 for err in error
-//-                     .iscolor #{error.message}
-//-                 //--var er = error.message
-//-                 //-- var a = er.slice(1,10)
-//-                 //- h1= a
 extends layout
 
 block content
@@ -76,6 +45,10 @@ block content
               //--var a = er.slice(1)
               //-h1= a
               form(role="form", method="POST", action="/auth/register")
+                label.label 
+                  | Field with 
+                  strong.iscolor *
+                  |  is required.
                 label.label Username (atleast 8 alpha characters only)
                   input.input(type="text", placeholder="", name="username")
                 label.label Password
@@ -84,8 +57,10 @@ block content
                   input.input(type="text", placeholder="", name="first_name")
                 label.label Last Name
                   input.input(type="text", placeholder="", name="last_name")
-                label.label Email
-                  input.input(type="text", placeholder="", name="email")
+                label.label 
+                  | Email
+                  strong.iscolor *
+                  input.input(type="text", placeholder="example@example.com", name="email")
                 p.control
                   .block
                       button.button.is-dark(type="submit" , value="Register") Register
