--- a/views/departments.jade
+++ b/views/departments.jade
@@ -20,7 +20,7 @@ block content
                   | Departments
                 a.nav-item(href='/departments/addnew')
                   | Add Data
-                a.nav-item.is-active(href='/auth/logout')
+                a.nav-item(href='/auth/logout')
                   | Log Out
     .hero-body
       .container 
