--- a/views/register.jade
+++ b/views/register.jade
@@ -45,9 +45,14 @@ block content
                   | Field with 
                   strong.iscolor *
                   |  is required.
-                label.label Username (atleast 8 alpha characters only)
+                label.label 
+                  | Username
+                  strong.iscolor *
+                  |  (atleast 8 alpha characters only)
                   input.input(type="text", placeholder="", name="username")
-                label.label Password
+                label.label 
+                  | Password
+                  strong.iscolor *
                   input.input(type="password", placeholder="", name="password")
                 label.label First Name
                   input.input(type="text", placeholder="", name="first_name")
