--- a/views/layout.jade
+++ b/views/layout.jade
@@ -9,6 +9,8 @@ html
     link(rel='stylesheet', type='text/css', href='/stylesheets/bulma.css')
     link(rel='stylesheet', type='text/css', href='/stylesheets/base.css')
     link(rel='stylesheet', type='text/css', href='/stylesheets/style.css')
+    script(type="text/javascript", src="/javascripts/jquery-min.js")
+    script(type="text/javascript", src="/javascripts/main.js")
 
   body
     block content
