--- a/views/addnew.jade
+++ b/views/addnew.jade
@@ -44,7 +44,7 @@ block content
                   //--var er = "#{error}"
                   //--var a = er.slice(1)
                   //-h1= a
-              form(method="POST", action="/departments/")
+              form(method="POST", action="/departments/addnew")
                 label.label 
                   | Field with 
                   strong.iscolor *
