--- a/views/customfooter.jade
+++ b/views/customfooter.jade
@@ -74,12 +74,13 @@ footer.page-footer.center-on-small-only
     // /.Footer
     // SCRIPTS
     // JQuery
-    script(type='text/javascript', src='js/jquery-2.2.3.min.js')
-    // Bootstrap tooltips
-    script(type='text/javascript', src='js/tether.min.js')
-    // Bootstrap core JavaScript
-    script(type='text/javascript', src='js/bootstrap.min.js')
-    // MDB core JavaScript
-    script(type='text/javascript', src='js/mdb.min.js')
+
+    script(type='text/javascript', src='/js/jquery-2.2.3.min.js')
+    script(type='text/javascript', src='/js/tether.min.js')
+    script(type='text/javascript', src='/js/bootstrap.min.js')
+    script(type='text/javascript', src='/js/mdb.min.js')
+
+    script(type='text/javascript', src='/javascripts/main.js')
+
 
 
