--- a/views/customlayout.jade
+++ b/views/customlayout.jade
@@ -4,15 +4,10 @@ html(lang='en')
     meta(charset='utf-8')
     meta(name='viewport', content='width=device-width, initial-scale=1, shrink-to-fit=no')
     meta(http-equiv='x-ua-compatible', content='ie=edge')
-    title Material Design Bootstrap
-    // Font Awesome
+    title CPE Resource Portal
     link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css')
-    // Bootstrap core CSS
-    link(href='css/bootstrap.min.css', rel='stylesheet')
-    // Material Design Bootstrap
-    link(href='css/mdb.min.css', rel='stylesheet')
-    link(href='css/style.css', rel='stylesheet')
-    // Template styles
+    link(href='/css/bootstrap.min.css', rel='stylesheet')
+    link(href='/css/mdb.min.css', rel='stylesheet')
     style(rel='stylesheet').
       /* TEMPLATE STYLES */
       main {
