--- a/views/subjects.jade
+++ b/views/subjects.jade
@@ -49,14 +49,15 @@
 //-   include footer
 
 
-extends layout
+extends customlayout
 
 block content
-    nav.navbar.navbar-toggleable-md.navbar-dark.fixed-top.scrolling-navbar
-      .container
-        button.navbar-toggler.navbar-toggler-right(type='button', data-toggle='collapse', data-target='#navbarNav1', aria-controls='navbarNav1', aria-expanded='false', aria-label='Toggle navigation')
-          span.navbar-toggler-icon
-        a.navbar-brand(href='#')
+  // Navbar
+  nav.navbar.navbar-toggleable-md.navbar-dark.green
+    .container
+      button.navbar-toggler.navbar-toggler-right(type='button', data-toggle='collapse', data-target='#navbarNav1', aria-controls='navbarNav1', aria-expanded='false', aria-label='Toggle navigation')
+        span.navbar-toggler-icon
+      a.navbar-brand(href='#')
           strong Navbar
         #navbarNav1.collapse.navbar-collapse
           ul.navbar-nav.mr-auto
@@ -70,65 +71,22 @@ block content
               a.nav-link(href='/subjects/addnew') Add
           li.nav-item.form-inline
               a.nav-link(href='/auth/logout') Log out
-    .view
-      .full-bg-img.flex-center
-        ul.animated.fadeInUp
-          .container.row.justify-content-center
-            .col-10
-              form.waves-effect.waves-light(method= 'post', action= '/subjects', onsubmit= 'getSearch()')
-                input#search.form-control(type='search', placeholder='Search')
-                //- .text-center
-                //-         button.btn.btn-indigo Search  
-              .list-group
-                a.list-group-item.active(href='#')
-                  p#count
-                li#table-body
-                //- a.list-group-item.list-group-item-action(href='#') Dapibus ac facilisis in
-                //- a.list-group-item.list-group-item-action(href='#') Morbi leo risus
-                //- a.list-group-item.list-group-item-action(href='#') Porta ac consectetur ac
-                //- a.list-group-item.list-group-item-action.disabled(href='#') Vestibulum at eros
-    include footer
+  br
+  br
+  .container
+    .container
+      ul.animated.fadeInUp
+        li
+          .row.justify-content-center
+                  .col-10
+                    form.waves-effect.waves-light(method= 'post', action= '/subjects', onsubmit= 'getSearch()')
+                      input#search.form-control(type='search', placeholder='Search')
+                      //- .text-center
+                      //-         button.btn.btn-indigo Search  
+                    .list-group
+                      a.list-group-item.primary(href='#')
+                        | Subjects
+                      #table-body
+          
 
-
-//- extends customlayout
-
-//- block content
-//-  header
-//-       nav.navbar.navbar-toggleable-md.navbar-dark
-//-         .container
-//-           button.navbar-toggler.navbar-toggler-right(type='button', data-toggle='collapse', data-target='#navbarNav1', aria-controls='navbarNav1', aria-expanded='false', aria-label='Toggle navigation')
-//-             span.navbar-toggler-icon
-//-           a.navbar-brand(href='#')
-//-           strong Navbar
-//-         #navbarNav1.collapse.navbar-collapse
-//-           ul.navbar-nav.mr-auto
-//-             li.nav-item
-//-               a.nav-link(href='/')
-//-                 | Home 
-//-             li.nav-item.active
-//-               a.nav-link(href='/subjects') Subjects
-//-                 span.sr-only (current)
-//-             li.nav-item
-//-               a.nav-link(href='/subjects/addnew') Add
-//-           li.nav-item.form-inline
-//-               a.nav-link(href='/auth/logout') Log out
-//-       // /.Navbar
-//-     main
-//-       // Main layout
-//-       .container
-//-         .row
-//-           // Main column
-//-           .col-lg-8
-//-             // Post
-//-             .post-wrapper
-//-               .container.row.justify-content-center
-//-                 .col-10
-//-                   form.waves-effect.waves-light(method= 'post', action= '/subjects', onsubmit= 'getSearch()')
-//-                     input#search.form-control(type='search', placeholder='Search')
-//-                     //- .text-center
-//-                     //-         button.btn.btn-indigo Search  
-//-                   .list-group
-//-                     a.list-group-item.active(href='#')
-//-                       p#count
-//-                     li#table-body
-//-     include customfooter
+  include customfooter
