--- a/views/footer.jade
+++ b/views/footer.jade
@@ -1,10 +1,4 @@
-footer.page-footer.center-on-small-only
-      .container-fluid
-        .row
-          .col-md-3.offset-lg-1.hidden-lg-down
-            h5.title ABOUT MATERIAL DESIGN
-            p
-              | Material Design (codenamed Quantum Paper) is a design language developed by Google.
+footer
     script(type='text/javascript', src='/js/jquery-2.2.3.min.js')
     script(type='text/javascript', src='/js/tether.min.js')
     script(type='text/javascript', src='/js/bootstrap.min.js')
