--- a/views/log-in.jade
+++ b/views/log-in.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-    nav.navbar.navbar-toggleable-md.navbar-dark.fixed-top.scrolling-navbar
+    nav.navbar.navbar-toggleable-md.navbar-dark.green
       .container
         button.navbar-toggler.navbar-toggler-right(type='button', data-toggle='collapse', data-target='#navbarNav1', aria-controls='navbarNav1', aria-expanded='false', aria-label='Toggle navigation')
           span.navbar-toggler-icon
