--- a/views/register.jade
+++ b/views/register.jade
@@ -76,8 +76,7 @@
 extends layout
 
 block content
-    nav.navbar.navbar-toggleable-md.navbar-dark.fixed-top.scrolling-navbar
-      .container
+    nav.navbar.navbar-toggleable-md.navbar-dark.green
         button.navbar-toggler.navbar-toggler-right(type='button', data-toggle='collapse', data-target='#navbarNav1', aria-controls='navbarNav1', aria-expanded='false', aria-label='Toggle navigation')
           span.navbar-toggler-icon
         a.navbar-brand(href='#')
@@ -106,7 +105,7 @@ block content
                   .card-block
                     // Header
                     form(role="form", method="POST", action="/auth/register")
-                      .form-header.blue-gradient
+                      .form-header.success-color-dark
                         h3
                           i.fa
                           |  Register:
@@ -143,7 +142,7 @@ block content
                         input#form2.form-control(type='text', name="email")
                         label(for='form2') Your email*
                       .text-center
-                        button.btn.btn-indigo Sign up  
+                        button.btn.success-color-dark Sign up  
                   
 
 
