--- a/views/subjectdata.jade
+++ b/views/subjectdata.jade
@@ -75,14 +75,83 @@
   
 //-   include footer
 
-extends layout
+//- extends layout
+
+//- block content
+//-     nav.navbar.navbar-toggleable-md.navbar-dark.fixed-top.scrolling-navbar
+//-       .container
+//-         button.navbar-toggler.navbar-toggler-right(type='button', data-toggle='collapse', data-target='#navbarNav1', aria-controls='navbarNav1', aria-expanded='false', aria-label='Toggle navigation')
+//-           span.navbar-toggler-icon
+//-         a.navbar-brand(href='#')
+//-           strong Navbar
+//-         #navbarNav1.collapse.navbar-collapse
+//-           ul.navbar-nav.mr-auto
+//-             li.nav-item
+//-               a.nav-link(href='/')
+//-                 | Home 
+//-             li.nav-item
+//-               a.nav-link(href='/subjects') Subjects    
+//-             li.nav-item
+//-               a.nav-link(href='/subjects/addnew') Add
+//-           li.nav-item.form-inline
+//-               a.nav-link(href='/auth/logout') Log out
+//-     .view
+//-       .full-bg-img.flex-center
+//-         ul.animated.fadeInUp
+//-           li
+//-             br
+//-             br
+//-             br
+            //- .container.row.justify-content-center
+            //-   .col-8
+            //-     .card-block
+            //-         // Header
+            //-         .text-center
+            //-           h3
+            //-             i.fa
+            //-             |  #{subjectdata.name}
+            //-           hr.mt-2.mb-2
+            //-         // Body
+            //-         p
+            //-         | Subject Code: #{subjectdata.code}
+            //-         br
+            //-         | Subject Year: #{subjectdata.year}
+            //-         br
+            //-         | Subject Sem: #{subjectdata.sem} 
+            //-         br
+            //-         br
+            //-         table.table
+            //-           thead
+            //-             tr
+            //-               th Item Description
+            //-               th Item Type
+            //-               th Upload Date
+            //-           tbody
+            //-             for item in items
+            //-               if (item.subject === subjectdata.code)
+            //-                 //- li
+            //-                 //-   a.panel-block.is-active(href="#{item.link}" ) #{item.description}                        
+            //-                 tr
+            //-                   td 
+            //-                     a(href="#{item.link}" target="_blank") #{item.description}
+            //-                   td #{item.type}
+            //-                   td #{moment(item.createdate).format("LLL")}
+
+                            
+            //-         .text-center
+            //-             a.btn.btn-primary(href='/subjects/'+subjectdata._id+'/update') Edit  
+            //-             a.btn.btn-primary(href='/subjects/'+subjectdata._id+'/Delete') Delete
+            //-             a.btn.btn-primary(href='/subjects/'+subjectdata._id+'/itemnew') Add link
+
+extends customlayout
 
 block content
-    nav.navbar.navbar-toggleable-md.navbar-dark.fixed-top.scrolling-navbar
-      .container
-        button.navbar-toggler.navbar-toggler-right(type='button', data-toggle='collapse', data-target='#navbarNav1', aria-controls='navbarNav1', aria-expanded='false', aria-label='Toggle navigation')
-          span.navbar-toggler-icon
-        a.navbar-brand(href='#')
+  // Navbar
+  nav.navbar.navbar-toggleable-md.navbar-dark.green
+    .container
+      button.navbar-toggler.navbar-toggler-right(type='button', data-toggle='collapse', data-target='#navbarNav1', aria-controls='navbarNav1', aria-expanded='false', aria-label='Toggle navigation')
+        span.navbar-toggler-icon
+      a.navbar-brand(href='#')
           strong Navbar
         #navbarNav1.collapse.navbar-collapse
           ul.navbar-nav.mr-auto
@@ -95,54 +164,50 @@ block content
               a.nav-link(href='/subjects/addnew') Add
           li.nav-item.form-inline
               a.nav-link(href='/auth/logout') Log out
-    .view
-      .full-bg-img.flex-center
-        ul.animated.fadeInUp
-          li
-            br
-            br
-            br
-            .container.row.justify-content-center
-              .col-8
-                .card-block
-                    // Header
-                    .text-center
-                      h3
-                        i.fa
-                        |  #{subjectdata.name}
-                      hr.mt-2.mb-2
-                    // Body
-                    p
-                    | Subject Code: #{subjectdata.code}
-                    br
-                    | Subject Year: #{subjectdata.year}
-                    br
-                    | Subject Sem: #{subjectdata.sem} 
-                    br
-                    br
-                    table.table
-                      thead
-                        tr
-                          th Item Description
-                          th Item Type
-                          th Upload Date
-                      tbody
-                        for item in items
-                          if (item.subject === subjectdata.code)
-                            //- li
-                            //-   a.panel-block.is-active(href="#{item.link}" ) #{item.description}                        
-                            tr
-                              td 
-                                a(href="#{item.link}" target="_blank") #{item.description}
-                              td #{item.type}
-                              td #{moment(item.createdate).format("LLL")}
+  .container
+    ul.animated.fadeInUp
+      li
+        .row.justify-content-center
+                .col-8
+                  .card-block
+                      // Header
+                      .text-center
+                        h3
+                          i.fa
+                          |  #{subjectdata.name}
+                        hr.mt-2.mb-2
+                        // Body
+                        p
+                        | Subject Code: #{subjectdata.code}
+                        br
+                        | Subject Year: #{subjectdata.year}
+                        br
+                        | Subject Sem: #{subjectdata.sem} 
+                      br
+                      br
+                      table.table
+                        thead
+                          tr
+                            th Item Description
+                            th Item Type
+                            th Upload Date
+                        tbody
+                          for item in items
+                            if (item.subject === subjectdata.code)
+                              //- li
+                              //-   a.panel-block.is-active(href="#{item.link}" ) #{item.description}                        
+                              tr
+                                td 
+                                  a(href="#{item.link}" target="_blank") #{item.description}
+                                td #{item.type}
+                                td #{moment(item.createdate).format("LLL")}
 
-                            
-                    .text-center
-                        a.btn.btn-primary(href='/subjects/'+subjectdata._id+'/update') Edit  
-                        a.btn.btn-primary(href='/subjects/'+subjectdata._id+'/Delete') Delete
-                        a.btn.btn-primary(href='/subjects/'+subjectdata._id+'/itemnew') Add link
+                              
+                      .text-center
+                          a.btn.btn-primary(href='/subjects/'+subjectdata._id+'/update') Edit
+                          a.btn.btn-default(href='/subjects/'+subjectdata._id+'/itemnew') Add link
+          
 
-    include footer
+  include customfooter
 
               
