--- a/views/index.jade
+++ b/views/index.jade
@@ -15,9 +15,10 @@ block content
                 span.sr-only (current)
             if (user)
               li.nav-item
-                a.nav-link(href='/subjects') Subjects
-              li.nav-item
-                a.nav-link(href='/subjects/addnew') Add
+                a.nav-link(href='/portal') Subjects
+              if (user.acctype ==='admin')
+                li.nav-item
+                  a.nav-link(href='/subjects/addnew') Add
               li.nav-item
                 a.nav-link(href='/auth/logout') Log out
             else
@@ -36,8 +37,9 @@ block content
                 a(href="/auth/logout") Logout
                 br
                 br
-                a.btn.btn-primary.btn-lg(href='/subjects') Subjects
-                a.btn.btn-default.btn-lg(href='/subjects/addnew') Add
+                a.btn.btn-primary.btn-lg(href='/portal') Subjects
+                if (user.acctype ==='admin')
+                  a.btn.btn-default.btn-lg(href='/subjects/addnew') Add
             else
                 a.btn.btn-primary.btn-lg(href='/auth/login') Login
                 a.btn.btn-default.btn-lg(href='/auth/register') Register
