--- a/views/update.jade
+++ b/views/update.jade
@@ -1,88 +1,3 @@
-//- extends layout
-
-//- block content
-//-   section.hero.is-fullheight.is-dark.is-bold
-//-     .hero-head
-//-       .container
-//-         nav.nav
-//-           .container
-//-             .nav-left
-//-               a.nav-item(href='/')
-//-                 img(src='/images/bulma-white.png', alt='Description')
-//-             span.nav-toggle
-//-               span
-//-               span
-//-               span
-//-             .nav-right.nav-menu
-//-               a.nav-item(href='/')
-//-                 | Home
-//-               a.nav-item(href='/subjects')
-//-                 | Subjects
-//-               a.nav-item(href='/subjects/addnew')
-//-                 | Add Data
-//-               a.nav-item(href='/auth/logout')
-//-                 | Log Out
-                
-//-     .hero-body
-//-       .container
-//-         .columns.is-vcentered
-//-           .column.is-4.is-offset-4
-//-             h1.title
-//-               | Edit Data
-//-             .box
-//-               if (error)
-//-                 //-for err in error
-//-                 .notification.is-danger
-
-//-                   //--var er = error.message
-//-                   //-- var a = er.slice(1,10)
-//-                   //- h1= a
-//-                   | #{error}
-//-               form(method="POST", action="/subjects/#{update._id}/update")
-//-                 label.label.is-danger 
-//-                   | Department Name 
-//-                   strong.iscolor *
-//-                 //- if (error == 'ValidationError: Please fill the Department Name')
-//-                 //-   p.control.has-icon.has-icon-right
-//-                 //-     input.input.is-danger(type="text", placeholder="Department Name", name="dep_name", value="#{update.dep_name}")
-//-                 //-     span.icon.is-small
-//-                 //- else
-//-                 p.control
-//-                   input.input(type="text", placeholder="", name="dep_name", value="#{update.dep_name}")
-//-                 label.label 
-//-                   | Abbreviation 
-//-                   strong.iscolor *
-//-                 p.control
-//-                   input.input(type="text", placeholder="", name="abbrv", value="#{update.abbrv}")
-//-                 label.label 
-//-                   | Secretary/Head 
-//-                   strong.iscolor *
-
-//-                 p.control
-//-                   input.input(type="text", placeholder="", name="head", value="#{update.head}")
-//-                 label.label Official Website
-//-                 p.control
-//-                   input.input(type="url", placeholder="http://www.example.com", name="website", value="#{update.website}")
-//-                 label.label Contact Number
-//-                 p.control
-//-                   input.input(type="value", placeholder="Contact Number", name="contact", value="#{update.contact}")
-//-                 label.label Facebook
-//-                 p.control
-//-                   input.input(type="text", placeholder="http://www.facebook.com/example", name="fb", value="#{update.fb}")
-//-                 label.label Twitter
-//-                 p.control
-//-                   input.input(type="text", placeholder="http://www.twitter.com/example", name="tw", value="#{update.tw}")
-//-                 label.label Image
-//-                 p.control
-//-                   input.input(type="text", placeholder="Image (URL)", name="picture", value="#{update.picture}")
-//-                 p.control
-//-                   button.button.is-dark(type="submit" ) Submit
-//-                   span 
-//-                   a.btn.btn-link(href="/subjects/#{update._id}")
-//-                         button.button.is-dark(type="button") Cancel
-              
-//- include footer
-
 
 extends customlayout
 
@@ -109,7 +24,7 @@ block content
         ul.animated.fadeInUp
           li
             .row.justify-content-center
-              .col-6
+              .col-8
                   .card-block
                     form(method="POST", action="/subjects/#{update._id}/update")
                       // Header
@@ -140,8 +55,9 @@ block content
                         label(for='form34') Subject Sem*
                       .text-center
                         button.btn.btn-default(type="submit") Submit
-                        a.btn.btn-primary(href='/subjects/#{update._id}') Cancel
+                        a.btn.btn-primary(href='/portal/#{update._id}') Cancel
                         a.btn.btn-danger(href='/subjects/#{update._id}/Delete') Delete
+                      br
                       table.table
                         thead
                           tr
@@ -159,7 +75,7 @@ block content
                                 td #{moment(item.createdate).format("LLL")}
                                 td
                                   a.red-text(href="/subjects/delete/#{update._id}/#{item._id}")
-                                    i.fa
+                                    button.btn.btn-danger
                                       | Delete
 
 
