--- a/views/addnew.jade
+++ b/views/addnew.jade
@@ -14,7 +14,7 @@ block content
               a.nav-link(href='/')
                 | Home 
             li.nav-item
-              a.nav-link(href='/subjects') Subjects    
+              a.nav-link(href='/portal') Subjects    
             li.nav-item.active
               a.nav-link(href='/subjects/addnew') Add
                 span.sr-only (current)
