--- a/views/index.jade
+++ b/views/index.jade
@@ -18,6 +18,8 @@ block content
               if (user.acctype ==='admin')
                 li.nav-item
                   a.nav-link(href='/subjects/addnew') Add
+                li.nav-item
+                a.nav-link(href='/subjects/edit/users') Accounts
               li.nav-item
                 a.nav-link(href='/auth/logout') Log out
             else
