--- a/views/addnew.jade
+++ b/views/addnew.jade
@@ -18,6 +18,8 @@ block content
             li.nav-item.active
               a.nav-link(href='/subjects/addnew') Add
                 span.sr-only (current)
+            li.nav-item
+                a.nav-link(href='/subjects/edit/users') Accounts
           li.nav-item.form-inline
               a.nav-link(href='/auth/logout') Log out
     .view
