--- a/views/subjectdata.jade
+++ b/views/subjectdata.jade
@@ -19,6 +19,8 @@ block content
             if (user.acctype === 'admin')
               li.nav-item
                 a.nav-link(href='/subjects/addnew') Add
+              li.nav-item
+                a.nav-link(href='/subjects/edit/users') Accounts
           li.nav-item.form-inline
               a.nav-link(href='/auth/logout') Log out
   .container
