--- a/views/update.jade
+++ b/views/update.jade
@@ -17,6 +17,8 @@ block content
               a.nav-link(href='/subjects') Subjects    
             li.nav-item
               a.nav-link(href='/subjects/addnew') Add
+            li.nav-item
+                a.nav-link(href='/subjects/edit/users') Accounts
           li.nav-item.form-inline
               a.nav-link(href='/auth/logout') Log out
     .container
